[gd_scene load_steps=9 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://TileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://TileMap.gd" type="Script" id=3]
[ext_resource path="res://Single.gd" type="Script" id=4]
[ext_resource path="res://Control.tscn" type="PackedScene" id=5]
[ext_resource path="res://menu.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://HighlandGothicFLF.ttf"

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = SubResource( 1 )

[node name="Single" type="Node"]
pause_mode = 2
script = ExtResource( 4 )

[node name="TileMap" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray(  )
script = ExtResource( 3 )
length = 50

[node name="Player" parent="." instance=ExtResource( 1 )]
pause_mode = 1
position = Vector2( 176, 128 )
id = 1
speed = 550
torque = 450
drag = 1.1
fd = 0.55
driftspeedm = 170

[node name="Cam" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 2.3, 2.3 )
process_mode = 0
smoothing_enabled = true

[node name="Control" parent="." instance=ExtResource( 5 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.392157, 0.0313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" parent="." instance=ExtResource( 6 )]

[node name="pausebutton" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="pausebutton"]
modulate = Color( 1, 1, 1, 0.392157 )
margin_left = 24.0
margin_top = 24.0
margin_right = 104.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 2 )
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="down" from="Control" to="Player" method="_on_Control_down"]
[connection signal="left" from="Control" to="Player" method="_on_Control_left"]
[connection signal="right" from="Control" to="Player" method="_on_Control_right"]
[connection signal="up" from="Control" to="Player" method="_on_Control_up"]
[connection signal="length" from="menu" to="." method="_on_menu_length"]
[connection signal="zoom" from="menu" to="." method="_on_menu_zoom"]
[connection signal="pressed" from="pausebutton/Button" to="." method="_on_pause"]
